New sexy looking rooms

--- a/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Oli_BPs/Assets
+ContentBrowserDrawer.SelectedPaths=/Game/Oli_BPs
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -165,6 +165,7 @@ OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownControl
 OpenAssetsAtExit=/Game/Oli_BPs/Room_BP.Room_BP
 OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode
 OpenAssetsAtExit=/Game/Oli_BPs/Door_BP.Door_BP
+OpenAssetsAtExit=/Game/Oli_BPs/Assets/door_1CleanedMaterial.door_1CleanedMaterial
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1899,15 +1900,19 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Oli_BPs/Assets/door_1CleanedMaterial
-MRUItem1=/Game/Oli_BPs/Door_BP
-MRUItem2=/Game/Oli_BPs/Camera_BP
-MRUItem3=/Game/Oli_BPs/Room_BP
-MRUItem4=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem5=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem6=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem0=/Game/Oli_BPs/Assets/Finished-Assets/room_tex
+MRUItem1=/Game/Oli_BPs/Assets/door_1CleanedMaterial
+MRUItem2=/Game/Oli_BPs/Door_BP
+MRUItem3=/Game/Oli_BPs/Camera_BP
+MRUItem4=/Game/Oli_BPs/Room_BP
+MRUItem5=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem6=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem7=/Game/TopDown/Blueprints/BP_TopDownCharacter
 
 [PlacementMode]
 RecentlyPlaced=/Game/Oli_BPs/Assets/door1_mesh.door1_mesh;
