--- a/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Enemy
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -152,12 +152,17 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/TopDown/Maps/TopDownMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Enemy/Enemy_BP.Enemy_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1088,8 +1093,207 @@ Voice.TimeStamp=2022.07.26-14.25.10
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2022.07.26-14.25.06
 MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2022.07.26-14.25.02
+BlueprintGraph.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2022.07.26-14.25.06
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.WorldPartition=True
+StaticMeshActor.Actor=True
+Enemy_BP_C.Character=True
+Enemy_BP_C.Tick=True
+Enemy_BP_C.Camera=True
+Enemy_BP_C.Pawn=True
+Enemy_BP_C.Replication=True
+Enemy_BP_C.Rendering=True
+Enemy_BP_C.Collision=True
+Enemy_BP_C.Actor=True
+Enemy_BP_C.Input=True
+Enemy_BP_C.HLOD=True
+Enemy_BP_C.WorldPartition=True
+Enemy_BP_C.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+Enemy_BP_C.TransformCommon=True
+Enemy_BP_C.Animation=True
+Enemy_BP_C.Mesh=True
+Enemy_BP_C.Clothing=True
+Enemy_BP_C.Physics=True
+Enemy_BP_C.MasterPoseComponent=True
+Enemy_BP_C.Lighting=True
+Enemy_BP_C.AnimationRig=True
+Enemy_BP_C.Deformer=True
+Enemy_BP_C.SkinWeights=True
+Enemy_BP_C.Navigation=True
+Enemy_BP_C.VirtualTexture=True
+Enemy_BP_C.Tags=True
+Enemy_BP_C.Activation=True
+Enemy_BP_C.Cooking=True
+Enemy_BP_C.Character Movement (General Settings)=True
+Enemy_BP_C.Character Movement: Walking=True
+Enemy_BP_C.Character Movement: Jumping / Falling=True
+Enemy_BP_C.Character Movement (Networking)=True
+Enemy_BP_C.Character Movement: Swimming=True
+Enemy_BP_C.Character Movement: Flying=True
+Enemy_BP_C.Character Movement: Custom Movement=True
+Enemy_BP_C.Character Movement (Rotation Settings)=True
+Enemy_BP_C.Character Movement: Physics Interaction=True
+Enemy_BP_C.Character Movement=True
+Enemy_BP_C.Character Movement: Avoidance=True
+Enemy_BP_C.RootMotion=True
+Enemy_BP_C.Character Movement: NavMesh Movement=True
+Enemy_BP_C.NavMovement=True
+Enemy_BP_C.Velocity=True
+Enemy_BP_C.PlanarMovement=True
+Enemy_BP_C.MovementComponent=True
+Enemy_BP_C.Shape=True
+BehaviorTreeGraphNode_Root.AI=True
+BTComposite_Selector.Composite=True
+BTComposite_Selector.Description=True
+BTComposite_Sequence.Composite=True
+BTComposite_Sequence.Description=True
+BlackboardData.Parent=True
+BlackboardData.Key=True
+BTDecorator_ConditionalLoop.Blackboard=True
+BTDecorator_ConditionalLoop.Description=True
+Enemy_Controller_C.AI=True
+Enemy_Controller_C.Tick=True
+Enemy_Controller_C.Controller=True
+Enemy_Controller_C.Replication=True
+Enemy_Controller_C.Actor=True
+Enemy_Controller_C.Input=True
+Enemy_Controller_C.HLOD=True
+Enemy_Controller_C.WorldPartition=True
+Enemy_Controller_C.Events=True
+BTComposite_SimpleParallel.Parallel=True
+BTComposite_SimpleParallel.Description=True
+TaskChasePlayer_C.Task=True
+TaskChasePlayer_C.Description=True
+Enemy_BP_C.AI=True
+PathFollowingComponent.Variable=True
+PathFollowingComponent.Sockets=True
+PathFollowingComponent.Tags=True
+PathFollowingComponent.ComponentTick=True
+PathFollowingComponent.ComponentReplication=True
+PathFollowingComponent.Activation=True
+PathFollowingComponent.Cooking=True
+PathFollowingComponent.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.Events=True
+Enemy_BP_C.Controller=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Variable=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+
+[ContentBrowserRecent]
+MRUItem0=/Game/Enemy/Enemy_BP
+MRUItem1=/Game/Enemy/Enemy_Controller
+MRUItem2=/Game/Enemy/TaskChasePlayer
+MRUItem3=/Game/Enemy/Enemy_Behaviour
+MRUItem4=/Game/Enemy/Enemy_Blackboard
+
+[PlacementMode]
+RecentlyPlaced=/Game/Enemy/Enemy_BP.Enemy_BP;
+
+[DetailPropertyExpansion]
+BlackboardData="\"Object.Blackboard\" "
+DataAsset="\"Object.Blackboard\" "
+Object=
+
+[SuppressableDialogs]
+Warning_ReparentTitle=False
+
+[AssetEditorToolkitTabLocation]
+/Game/Enemy/Enemy_Controller.Enemy_Controller=0
+/Game/Enemy/Enemy_Blackboard.Enemy_Blackboard=0
+/Game/Enemy/Enemy_Behaviour.Enemy_Behaviour=0
+/Game/Enemy/Enemy_BP.Enemy_BP=0
+/Game/Enemy/TaskChasePlayer.TaskChasePlayer=0
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text","softclass")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=False
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
