--- a/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -159,13 +159,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDown/Maps/TopDownMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter
-OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController
-OpenAssetsAtExit=/Game/Oli_BPs/Room_BP.Room_BP
-OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode
-OpenAssetsAtExit=/Game/Oli_BPs/Door_BP.Door_BP
-OpenAssetsAtExit=/Game/Oli_BPs/Assets/door_1CleanedMaterial.door_1CleanedMaterial
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -202,7 +196,7 @@ UNR=D:/2001555/UE5 Project/HardestRoute/Content/
 BRUSH=D:/2001555/UE5 Project/HardestRoute/Content/
 FBX=D:/2001555/UE5 Project/HardestRoute/Content/
 FBXAnim=D:/2001555/UE5 Project/HardestRoute/Content/
-GenericImport=D:/2001555/UE5 Project/HardestRoute/Content/
+GenericImport=../../../../../../Users/2001555/Downloads/room_tex.tga
 GenericExport=D:/2001555/UE5 Project/HardestRoute/Content/
 GenericOpen=D:/2001555/UE5 Project/HardestRoute/Content/
 GenericSave=D:/2001555/UE5 Project/HardestRoute/Content/
@@ -1096,10 +1090,21 @@ Voice.TimeStamp=2022.07.26-14.25.10
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2022.07.26-14.25.06
 MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2022.07.26-14.25.02
+BlueprintGraph.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2022.07.26-14.25.04
+ExternalImagePicker.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2022.07.26-14.25.06
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.TransformCommon.Transform,
@@ -1930,6 +1935,13 @@ EditorStyleSettings=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Oli_BPs/Camera_BP.Camera_BP=1
+/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter=1
+/Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController=1
+/Game/Oli_BPs/Room_BP.Room_BP=1
+/Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode=1
+/Game/Oli_BPs/Door_BP.Door_BP=1
+/Game/Oli_BPs/Assets/door_1CleanedMaterial.door_1CleanedMaterial=1
+/Game/Oli_BPs/Assets/Finished-Assets/room_mat.room_mat=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2103,4 +2115,64 @@ ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=0
+bPlatformUsed[50]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
