Enemy Damages player and healer heals

--- a/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Oli_BPs
+ContentBrowserDrawer.SelectedPaths=/Game/Enemy2/Enemy
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1112,7 +1112,7 @@ SceneComponent=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.
 Camera_BP_C=CameraComponent.TransformCommon.Transform,
 Room_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 PlayerStart=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
-CapsuleComponent=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+CapsuleComponent=
 BoxComponent=BoxComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,
 K2Node_VariableSet=CameraComponent.TransformCommon.Transform,
 K2Node_VariableGet=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
@@ -1123,6 +1123,7 @@ BrushComponent=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.
 NavMeshBoundsVolume=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 CameraActor=CameraComponent.TransformCommon.Transform,
 NavLinkProxy=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+Enemy_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1908,18 +1909,68 @@ MaterialExpressionVectorParameter.ParameterCustomization=True
 MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSample.MaterialExpression=True
+Enemy_BP_C.AI=True
+Enemy_BP_C.Tick=True
+Enemy_BP_C.Controller=True
+Enemy_BP_C.Replication=True
+Enemy_BP_C.Actor=True
+Enemy_BP_C.Input=True
+Enemy_BP_C.HLOD=True
+Enemy_BP_C.WorldPartition=True
+Enemy_BP_C.Events=True
+Enemy_BP_C.TransformCommon=True
+Enemy_BP_C.Animation=True
+Enemy_BP_C.Mesh=True
+Enemy_BP_C.Default=True
+Enemy_BP_C.Physics=True
+Enemy_BP_C.Clothing=True
+Enemy_BP_C.Collision=True
+Enemy_BP_C.MasterPoseComponent=True
+Enemy_BP_C.Lighting=True
+Enemy_BP_C.AnimationRig=True
+Enemy_BP_C.Deformer=True
+Enemy_BP_C.SkinWeights=True
+Enemy_BP_C.Rendering=True
+Enemy_BP_C.Navigation=True
+Enemy_BP_C.VirtualTexture=True
+Enemy_BP_C.Tags=True
+Enemy_BP_C.Activation=True
+Enemy_BP_C.Cooking=True
+Enemy_BP_C.Character Movement (General Settings)=True
+Enemy_BP_C.Character Movement: Walking=True
+Enemy_BP_C.Character Movement: Jumping / Falling=True
+Enemy_BP_C.Character Movement (Networking)=True
+Enemy_BP_C.Character Movement: Swimming=True
+Enemy_BP_C.Character Movement: Flying=True
+Enemy_BP_C.Character Movement: Custom Movement=True
+Enemy_BP_C.Character Movement (Rotation Settings)=True
+Enemy_BP_C.Character Movement: Physics Interaction=True
+Enemy_BP_C.Character Movement=True
+Enemy_BP_C.Character Movement: Avoidance=True
+Enemy_BP_C.RootMotion=True
+Enemy_BP_C.Character Movement: NavMesh Movement=True
+Enemy_BP_C.NavMovement=True
+Enemy_BP_C.Velocity=True
+Enemy_BP_C.PlanarMovement=True
+Enemy_BP_C.MovementComponent=True
+Enemy_BP_C.Shape=True
+Enemy_BP_C.Character=True
+Enemy_BP_C.Camera=True
+Enemy_BP_C.Pawn=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Oli_BPs/Assets/Finished-Assets/room_tex
-MRUItem1=/Game/Oli_BPs/Assets/door_1CleanedMaterial
-MRUItem2=/Game/Oli_BPs/Door_BP
-MRUItem3=/Game/Oli_BPs/Camera_BP
-MRUItem4=/Game/Oli_BPs/Room_BP
-MRUItem5=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem6=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem7=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem0=/Game/Enemy/Enemy_BP
+MRUItem1=/Game/Oli_BPs/Assets/Finished-Assets/room_tex
+MRUItem2=/Game/Oli_BPs/Assets/door_1CleanedMaterial
+MRUItem3=/Game/Oli_BPs/Door_BP
+MRUItem4=/Game/Oli_BPs/Camera_BP
+MRUItem5=/Game/Oli_BPs/Room_BP
+MRUItem6=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem7=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem8=/Game/TopDown/Blueprints/BP_TopDownCharacter
 
 [PlacementMode]
+RecentlyPlaced=/Game/Enemy2/Enemy/Enemy_BP.Enemy_BP;
 RecentlyPlaced=/Game/Oli_BPs/Assets/door1_mesh.door1_mesh;
 RecentlyPlaced=/Game/Oli_BPs/Room_BP.Room_BP;
 RecentlyPlaced=/Game/Oli_BPs/Camera_BP.Camera_BP;
@@ -1942,6 +1993,7 @@ EditorStyleSettings=True
 /Game/Oli_BPs/Door_BP.Door_BP=1
 /Game/Oli_BPs/Assets/door_1CleanedMaterial.door_1CleanedMaterial=1
 /Game/Oli_BPs/Assets/Finished-Assets/room_mat.room_mat=1
+/Game/Enemy/Enemy_BP.Enemy_BP=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
