--- a/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -154,6 +154,36 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSize=2
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Source Frame Rate
+SequenceBrowser.HiddenColumns=Number of Frames
+SequenceBrowser.HiddenColumns=Number of Keys
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=Target Frame Rate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=RetargetSourceAsset
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=TargetFrameRate
+SequenceBrowser.HiddenColumns=NumberOfSampledKeys
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/TopDown/Maps/TopDownMap
@@ -192,7 +222,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/2001555/UE5 Project/HardestRoute/Content/
+UNR=D:/2001555/UE5 Project/Hardest-Route-2/HardestRoute/Content/TopDown/Maps
 BRUSH=D:/2001555/UE5 Project/HardestRoute/Content/
 FBX=D:/2001555/UE5 Project/HardestRoute/Content/
 FBXAnim=D:/2001555/UE5 Project/HardestRoute/Content/
@@ -1096,13 +1126,24 @@ ExternalImagePicker.TimeStamp=2022.07.26-14.25.04
 ExternalImagePicker.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.07.26-14.25.06
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2022.07.26-14.25.08
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2022.07.26-14.25.08
+PinnedCommandList.LastCompileMethod=Unknown
+PhysicsAssetEditor.TimeStamp=2022.07.26-14.25.08
+PhysicsAssetEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2022.07.26-14.25.08
+SequencerWidgets.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2022.07.26-14.25.10
+TextureEditor.LastCompileMethod=Unknown
+WorldBrowser.TimeStamp=2022.07.26-14.25.10
+WorldBrowser.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -1112,7 +1153,7 @@ SceneComponent=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.
 Camera_BP_C=CameraComponent.TransformCommon.Transform,
 Room_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 PlayerStart=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
-CapsuleComponent=
+CapsuleComponent=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,
 K2Node_VariableSet=CameraComponent.TransformCommon.Transform,
 K2Node_VariableGet=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
@@ -1124,6 +1165,8 @@ NavMeshBoundsVolume=CameraComponent.TransformCommon.Transform,BoxComponent.Colli
 CameraActor=CameraComponent.TransformCommon.Transform,
 NavLinkProxy=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 Enemy_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
+MainMenu-Widget_C=CameraComponent.TransformCommon.Transform,
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1957,17 +2000,127 @@ Enemy_BP_C.Shape=True
 Enemy_BP_C.Character=True
 Enemy_BP_C.Camera=True
 Enemy_BP_C.Pawn=True
+Enemy_Controller_C.AI=True
+Enemy_Controller_C.Tick=True
+Enemy_Controller_C.Controller=True
+Enemy_Controller_C.Replication=True
+Enemy_Controller_C.Actor=True
+Enemy_Controller_C.Input=True
+Enemy_Controller_C.HLOD=True
+Enemy_Controller_C.WorldPartition=True
+Enemy_Controller_C.Events=True
+BehaviorTreeGraphNode_Root.AI=True
+TaskChasePlayer_C.Task=True
+TaskChasePlayer_C.Description=True
+BlackboardData.Parent=True
+FbxImportUI.Animation=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.Animation=True
+SkeletalMesh.RayTracing=True
+SkeletalMesh.Sampling=True
+PhysicsAssetGenerationSettings.Body Creation=True
+PhysicsAssetGenerationSettings.Constraint Creation=True
+SkeletalBodySetup.Physics=True
+SkeletalBodySetup.Collision=True
+SkeletalBodySetup.BodySetup=True
+AnimationRecordingParameters.Options=True
+AnimSequence.Animation=True
+AnimSequence.Compression=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.RootMotion=True
+AnimSequence.File Path=True
+AnimSequence.CustomAttributes=True
+AnimSequence.Animation Model=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+BoneProxy.Bone=True
+BoneProxy.Transforms=True
+BP_TopDownCharacter_C.Default=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+MainMenu_Lvl_C.Tick=True
+MainMenu_Lvl_C.Replication=True
+MainMenu_Lvl_C.Actor=True
+MainMenu_Lvl_C.Input=True
+MainMenu_Lvl_C.HLOD=True
+MainMenu_Lvl_C.WorldPartition=True
+MainMenu_Lvl_C.Events=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy/Enemy_BP
-MRUItem1=/Game/Oli_BPs/Assets/Finished-Assets/room_tex
-MRUItem2=/Game/Oli_BPs/Assets/door_1CleanedMaterial
-MRUItem3=/Game/Oli_BPs/Door_BP
-MRUItem4=/Game/Oli_BPs/Camera_BP
-MRUItem5=/Game/Oli_BPs/Room_BP
-MRUItem6=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem7=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem8=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem0=/Game/Enemy2/Enemy/Enemy_BP
+MRUItem1=/Game/TopDown/Maps/TopDownMap
+MRUItem2=/Game/Oli_BPs/menu_w_cntrl
+MRUItem3=/Game/Oli_BPs/MainMenu-Widget
+MRUItem4=/Game/Oli_BPs/MainMenu_Lvl
+MRUItem5=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem6=/Game/Oli_BPs/Assets/Animations/NewAnimation1
+MRUItem7=/Game/Oli_BPs/Assets/Animations/NewAnimation
+MRUItem8=/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1__Skeleton
+MRUItem9=/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1__PhysicsAsset
+MRUItem10=/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1_
+MRUItem11=/Game/Oli_BPs/Assets/Animations/Player_characterCleanedMaterial
+MRUItem12=/Game/Enemy2/Enemy/Enemy_Behaviour
+MRUItem13=/Game/Enemy2/Enemy/Enemy_Controller
+MRUItem14=/Game/Enemy/Enemy_BP
+MRUItem15=/Game/Oli_BPs/Assets/Finished-Assets/room_tex
+MRUItem16=/Game/Oli_BPs/Assets/door_1CleanedMaterial
+MRUItem17=/Game/Oli_BPs/Door_BP
+MRUItem18=/Game/Oli_BPs/Camera_BP
+MRUItem19=/Game/Oli_BPs/Room_BP
 
 [PlacementMode]
 RecentlyPlaced=/Game/Enemy2/Enemy/Enemy_BP.Enemy_BP;
@@ -1994,6 +2147,17 @@ EditorStyleSettings=True
 /Game/Oli_BPs/Assets/door_1CleanedMaterial.door_1CleanedMaterial=1
 /Game/Oli_BPs/Assets/Finished-Assets/room_mat.room_mat=1
 /Game/Enemy/Enemy_BP.Enemy_BP=0
+/Game/Enemy2/Enemy/Enemy_BP.Enemy_BP=1
+/Game/Enemy2/Enemy/Enemy_Controller.Enemy_Controller=1
+/Game/Enemy2/Enemy/Enemy_Behaviour.Enemy_Behaviour=1
+/Game/Enemy/Enemy_Blackboard.Enemy_Blackboard=1
+/Game/Oli_BPs/Assets/Animations/Player_characterCleanedMaterial.Player_characterCleanedMaterial=1
+/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1_.playercharacterANIM_mesh__1_=1
+/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1__PhysicsAsset.playercharacterANIM_mesh__1__PhysicsAsset=1
+/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1__Skeleton.playercharacterANIM_mesh__1__Skeleton=1
+/Game/Oli_BPs/Assets/Animations/NewAnimation1.NewAnimation1=1
+/Game/Oli_BPs/MainMenu-Widget.MainMenu-Widget=1
+/Game/Oli_BPs/menu_w_cntrl.menu_w_cntrl=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2053,9 +2217,18 @@ SceneComponent=
 ActorComponent=
 BoxComponent=
 ShapeComponent=
+BlackboardData="\"Object.Blackboard\" "
+DataAsset="\"Object.SkeletalMeshes\" "
+PreviewMeshCollection="\"Object.SkeletalMeshes\" "
+Image="\"Object.Appearance.Brush\" "
+Widget="\"Object.Appearance.Brush\" "
+Visual="\"Object.Appearance.Brush\" "
+Border="\"Object.Appearance.Background\" "
+ContentWidget=
+PanelWidget=
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=BlueprintLog
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2227,4 +2400,125 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bAlwaysOpenAnimationAssetsInNewTab=False
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=True
+bExpandTreeOnSelection=True
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
+Contexts=(Name="PhysicsAssetEditor",Commands=)
+Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletonEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationEditor",Commands=)
+
+[MRU]
+MRUItem0=/Game/TopDown/Maps/TopDownMap
+MRUItem1=/Game/Oli_BPs/MainMenu_Lvl
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
 
