--- a/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Enemy2/Enemy
+ContentBrowserDrawer.SelectedPaths=/Game/Liam_Enemy
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -184,12 +184,19 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/TopDown/Maps/TopDownMap
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Liam_Enemy/Enemy_Controller.Enemy_Controller
+OpenAssetsAtExit=/Game/Liam_Enemy/Enemy_BP.Enemy_BP
+OpenAssetsAtExit=/Game/Liam_Enemy/Enemy_Behaviour.Enemy_Behaviour
+OpenAssetsAtExit=/Game/Liam_Enemy/TaskChasePlayer.TaskChasePlayer
+OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1153,12 +1160,12 @@ SceneComponent=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.
 Camera_BP_C=CameraComponent.TransformCommon.Transform,
 Room_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 PlayerStart=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
-CapsuleComponent=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+CapsuleComponent=
 BoxComponent=BoxComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,
-K2Node_VariableSet=CameraComponent.TransformCommon.Transform,
+K2Node_VariableSet=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 K2Node_VariableGet=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 BP_TopDownCharacter_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
-PropertyWrapper=CameraComponent.TransformCommon.Transform,
+PropertyWrapper=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 StaticMeshActor=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 BrushComponent=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 NavMeshBoundsVolume=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
@@ -1167,6 +1174,8 @@ NavLinkProxy=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Co
 Enemy_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 MainMenu-Widget_C=CameraComponent.TransformCommon.Transform,
+Actor=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+K2Node_CallFunction=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2099,33 +2108,80 @@ Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
 Texture2D.Compositing=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.HLOD=True
+Actor.Actor=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+BTDecorator_Blackboard.FlowControl=True
+BTDecorator_Blackboard.Blackboard=True
+BTDecorator_Blackboard.Description=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy2/Enemy/Enemy_BP
-MRUItem1=/Game/TopDown/Maps/TopDownMap
-MRUItem2=/Game/Oli_BPs/menu_w_cntrl
-MRUItem3=/Game/Oli_BPs/MainMenu-Widget
-MRUItem4=/Game/Oli_BPs/MainMenu_Lvl
-MRUItem5=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem6=/Game/Oli_BPs/Assets/Animations/NewAnimation1
-MRUItem7=/Game/Oli_BPs/Assets/Animations/NewAnimation
-MRUItem8=/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1__Skeleton
-MRUItem9=/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1__PhysicsAsset
-MRUItem10=/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1_
-MRUItem11=/Game/Oli_BPs/Assets/Animations/Player_characterCleanedMaterial
-MRUItem12=/Game/Enemy2/Enemy/Enemy_Behaviour
-MRUItem13=/Game/Enemy2/Enemy/Enemy_Controller
-MRUItem14=/Game/Enemy/Enemy_BP
-MRUItem15=/Game/Oli_BPs/Assets/Finished-Assets/room_tex
-MRUItem16=/Game/Oli_BPs/Assets/door_1CleanedMaterial
-MRUItem17=/Game/Oli_BPs/Door_BP
-MRUItem18=/Game/Oli_BPs/Camera_BP
-MRUItem19=/Game/Oli_BPs/Room_BP
+MRUItem0=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem1=/Game/Liam_Enemy/TaskChasePlayer
+MRUItem2=/Game/Liam_Enemy/Enemy_Behaviour
+MRUItem3=/Game/Liam_Enemy/Enemy_BP
+MRUItem4=/Game/Liam_Enemy/Enemy_Controller
+MRUItem5=/Game/Enemy/Enemy_BP
+MRUItem6=/Game/Enemy2/Enemy/Enemy_BP
+MRUItem7=/Game/TopDown/Maps/TopDownMap
+MRUItem8=/Game/Oli_BPs/menu_w_cntrl
+MRUItem9=/Game/Oli_BPs/MainMenu-Widget
+MRUItem10=/Game/Oli_BPs/MainMenu_Lvl
+MRUItem11=/Game/Oli_BPs/Assets/Animations/NewAnimation1
+MRUItem12=/Game/Oli_BPs/Assets/Animations/NewAnimation
+MRUItem13=/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1__Skeleton
+MRUItem14=/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1__PhysicsAsset
+MRUItem15=/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1_
+MRUItem16=/Game/Oli_BPs/Assets/Animations/Player_characterCleanedMaterial
+MRUItem17=/Game/Enemy2/Enemy/Enemy_Behaviour
+MRUItem18=/Game/Enemy2/Enemy/Enemy_Controller
+MRUItem19=/Game/Oli_BPs/Assets/Finished-Assets/room_tex
 
 [PlacementMode]
-RecentlyPlaced=/Game/Enemy2/Enemy/Enemy_BP.Enemy_BP;
-RecentlyPlaced=/Game/Oli_BPs/Assets/door1_mesh.door1_mesh;
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+RecentlyPlaced=/Game/Liam_Enemy/Enemy_BP.Enemy_BP;
+RecentlyPlaced=/Game/Oli_BPs/Assets/pillar_mesh.pillar_mesh;
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Oli_BPs/Room_BP.Room_BP;
+RecentlyPlaced=/Game/Oli_BPs/Assets/door1_mesh.door1_mesh;
 RecentlyPlaced=/Game/Oli_BPs/Camera_BP.Camera_BP;
 RecentlyPlaced=/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter;
 
@@ -2226,9 +2282,13 @@ Visual="\"Object.Appearance.Brush\" "
 Border="\"Object.Appearance.Background\" "
 ContentWidget=
 PanelWidget=
+BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
+AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2444,8 +2504,9 @@ Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 Contexts=(Name="AnimationEditor",Commands=)
 
 [MRU]
-MRUItem0=/Game/TopDown/Maps/TopDownMap
-MRUItem1=/Game/Oli_BPs/MainMenu_Lvl
+MRUItem0=/Game/Liam_Enemy/LiamTestLevel
+MRUItem1=/Game/TopDown/Maps/TopDownMap
+MRUItem2=/Game/Oli_BPs/MainMenu_Lvl
 
 [WidgetTemplatesExpanded]
 Editor=False
