Second commit of the day *wink*

--- a/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -145,7 +145,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Oli_BPs/Assets/Finished-Assets/Knife
+ContentBrowserDrawer.SelectedPaths=/Game/Oli_BPs
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1184,7 +1184,7 @@ bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.TransformCommon.Transform,
-SceneComponent=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+SceneComponent=
 Camera_BP_C=CameraComponent.TransformCommon.Transform,
 Room_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 PlayerStart=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
@@ -2272,12 +2272,12 @@ MRUItem18=/Game/Oli_BPs/MainMenu_Lvl
 MRUItem19=/Game/Oli_BPs/Assets/Animations/NewAnimation1
 
 [PlacementMode]
-RecentlyPlaced=/Game/Oli_BPs/Assets/Finished-Assets/Knife/knife_mesh.knife_mesh;
-RecentlyPlaced=/Game/Oli_BPs/Assets/Finished-Assets/Barrel/barrel2_mesh.barrel2_mesh;
-RecentlyPlaced=/Game/Oli_BPs/Assets/Finished-Assets/Modular-wall/wall_mesh.wall_mesh;
-RecentlyPlaced=/Game/Oli_BPs/Assets/Finished-Assets/Crate/crate_mesh.crate_mesh;
-RecentlyPlaced=/Game/Oli_BPs/Assets/Finished-Assets/Chair/chair_mesh.chair_mesh;
 RecentlyPlaced=/Game/Oli_BPs/Knife_BP.Knife_BP;
+RecentlyPlaced=/Game/Oli_BPs/Assets/Finished-Assets/Chair/chair_mesh.chair_mesh;
+RecentlyPlaced=/Game/Oli_BPs/Assets/Finished-Assets/Crate/crate_mesh.crate_mesh;
+RecentlyPlaced=/Game/Oli_BPs/Assets/Finished-Assets/Modular-wall/wall_mesh.wall_mesh;
+RecentlyPlaced=/Game/Oli_BPs/Assets/Finished-Assets/Barrel/barrel2_mesh.barrel2_mesh;
+RecentlyPlaced=/Game/Oli_BPs/Assets/Finished-Assets/Knife/knife_mesh.knife_mesh;
 RecentlyPlaced=/Game/Oli_BPs/Assets/Finished-Assets/portcullis_mesh.portcullis_mesh;
 RecentlyPlaced=/Game/Oli_BPs/Assets/pillar_mesh.pillar_mesh;
 RecentlyPlaced=/Game/Oli_BPs/Assets/Finished-Assets/paintings/orc_painting_Mat.orc_painting_Mat;
