enemy models, animations,attacking

--- a/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Liam_Enemy
+ContentBrowserDrawer.SelectedPaths=/Game/Liam_Enemy/EnemyModel/Brute
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -188,15 +188,12 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/Liam_Enemy/LiamTestLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Liam_Enemy/Enemy_Controller.Enemy_Controller
 OpenAssetsAtExit=/Game/Liam_Enemy/Enemy_BP.Enemy_BP
-OpenAssetsAtExit=/Game/Liam_Enemy/Enemy_Behaviour.Enemy_Behaviour
-OpenAssetsAtExit=/Game/Liam_Enemy/TaskChasePlayer.TaskChasePlayer
-OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter
+OpenAssetsAtExit=/Game/Liam_Enemy/EnemyBruteAnim_BP.EnemyBruteAnim_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1153,6 +1150,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.TransformCommon.Transform,
@@ -1176,6 +1174,11 @@ BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Tra
 MainMenu-Widget_C=CameraComponent.TransformCommon.Transform,
 Actor=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 K2Node_CallFunction=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+EnemyHealer_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+K2Node_Variable=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,
+EnemyBruteAnim_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
+AnimStateNode=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2152,30 +2155,149 @@ K2Node_FunctionEntry.GraphNodeDetail=True
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+SkeletalMeshComponent.SkeletalMesh=True
+StaticMeshComponent.TextureStreaming=True
+SkeletalMeshComponent.Optimization=True
+SkeletalMeshComponent.MaterialParameters=True
+StaticMeshComponent.MaterialParameters=True
+HUD-WidgetBP_C.Appearance=True
+HUD-WidgetBP_C.Designer=True
+HUD-WidgetBP_C.Input=True
+HUD-WidgetBP_C.Interaction=True
+HUD-WidgetBP_C.Performance=True
+HUD-WidgetBP_C.Layout=True
+HUD-WidgetBP_C.Behavior=True
+HUD-WidgetBP_C.Render Transform=True
+HUD-WidgetBP_C.Localization=True
+HUD-WidgetBP_C.Accessibility=True
+HUD-WidgetBP_C.Clipping=True
+HUD-WidgetBP_C.Navigation=True
+EnemyHealer_BP_C.Default=True
+EnemyHealer_BP_C.Tick=True
+EnemyHealer_BP_C.Character=True
+EnemyHealer_BP_C.Camera=True
+EnemyHealer_BP_C.Pawn=True
+EnemyHealer_BP_C.Replication=True
+EnemyHealer_BP_C.Rendering=True
+EnemyHealer_BP_C.Collision=True
+EnemyHealer_BP_C.Actor=True
+EnemyHealer_BP_C.Input=True
+EnemyHealer_BP_C.HLOD=True
+EnemyHealer_BP_C.WorldPartition=True
+EnemyHealer_BP_C.Events=True
+EnemyHealer_BP_C.TransformCommon=True
+EnemyHealer_BP_C.Animation=True
+EnemyHealer_BP_C.Mesh=True
+EnemyHealer_BP_C.Physics=True
+EnemyHealer_BP_C.Clothing=True
+EnemyHealer_BP_C.MasterPoseComponent=True
+EnemyHealer_BP_C.Lighting=True
+EnemyHealer_BP_C.AnimationRig=True
+EnemyHealer_BP_C.Deformer=True
+EnemyHealer_BP_C.SkinWeights=True
+EnemyHealer_BP_C.Navigation=True
+EnemyHealer_BP_C.VirtualTexture=True
+EnemyHealer_BP_C.Tags=True
+EnemyHealer_BP_C.Activation=True
+EnemyHealer_BP_C.Cooking=True
+EnemyHealer_BP_C.Character Movement (General Settings)=True
+EnemyHealer_BP_C.Character Movement: Walking=True
+EnemyHealer_BP_C.Character Movement: Jumping / Falling=True
+EnemyHealer_BP_C.Character Movement (Networking)=True
+EnemyHealer_BP_C.Character Movement: Swimming=True
+EnemyHealer_BP_C.Character Movement: Flying=True
+EnemyHealer_BP_C.Character Movement: Custom Movement=True
+EnemyHealer_BP_C.Character Movement (Rotation Settings)=True
+EnemyHealer_BP_C.Character Movement: Physics Interaction=True
+EnemyHealer_BP_C.Character Movement=True
+EnemyHealer_BP_C.Character Movement: Avoidance=True
+EnemyHealer_BP_C.RootMotion=True
+EnemyHealer_BP_C.Character Movement: NavMesh Movement=True
+EnemyHealer_BP_C.NavMovement=True
+EnemyHealer_BP_C.Velocity=True
+EnemyHealer_BP_C.PlanarMovement=True
+EnemyHealer_BP_C.MovementComponent=True
+EnemyHealer_BP_C.Shape=True
+AIPerceptionComponent.Variable=True
+AIPerceptionComponent.Sockets=True
+AIPerceptionComponent.AI Perception=True
+AIPerceptionComponent.Tags=True
+AIPerceptionComponent.ComponentTick=True
+AIPerceptionComponent.ComponentReplication=True
+AIPerceptionComponent.Cooking=True
+AIPerceptionComponent.Events=True
+BruteAnim_BP_C.RootMotion=True
+BruteAnim_BP_C.Notifies=True
+BruteAnim_BP_C.Montage=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimGraphNode_StateMachine.Functions=True
+AnimGraphNode_StateMachine.Tag=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+EnemyBruteAnim_BP_C.RootMotion=True
+EnemyBruteAnim_BP_C.Notifies=True
+EnemyBruteAnim_BP_C.Montage=True
+AnimGraphNode_SequenceEvaluator.Sync=True
+AnimGraphNode_SequenceEvaluator.Relevancy=True
+AnimGraphNode_SequenceEvaluator.Functions=True
+AnimGraphNode_SequenceEvaluator.Settings=True
+AnimGraphNode_SequenceEvaluator.Tag=True
+AnimGraphNode_SequencePlayer.Sync=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimGraphNode_SequencePlayer.Functions=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Tag=True
+Enemy_BP_C.DataLayers=True
+SkeletalMeshComponent.LOD=True
+SkeletalMeshComponent.TextureStreaming=True
+SkeletalMeshComponent.Mobile=True
+SkeletalMeshComponent.RayTracing=True
+SkeletalMeshComponent.AssetUserData=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+EnemyBruteAnim_BP_C.Default=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem1=/Game/Liam_Enemy/TaskChasePlayer
-MRUItem2=/Game/Liam_Enemy/Enemy_Behaviour
+MRUItem0=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_passout
+MRUItem1=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute__headbutt
+MRUItem2=/Game/Liam_Enemy/EnemyBruteAnim_BP
 MRUItem3=/Game/Liam_Enemy/Enemy_BP
-MRUItem4=/Game/Liam_Enemy/Enemy_Controller
-MRUItem5=/Game/Enemy/Enemy_BP
-MRUItem6=/Game/Enemy2/Enemy/Enemy_BP
-MRUItem7=/Game/TopDown/Maps/TopDownMap
-MRUItem8=/Game/Oli_BPs/menu_w_cntrl
-MRUItem9=/Game/Oli_BPs/MainMenu-Widget
-MRUItem10=/Game/Oli_BPs/MainMenu_Lvl
-MRUItem11=/Game/Oli_BPs/Assets/Animations/NewAnimation1
-MRUItem12=/Game/Oli_BPs/Assets/Animations/NewAnimation
-MRUItem13=/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1__Skeleton
-MRUItem14=/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1__PhysicsAsset
-MRUItem15=/Game/Oli_BPs/Assets/Animations/playercharacterANIM_mesh__1_
-MRUItem16=/Game/Oli_BPs/Assets/Animations/Player_characterCleanedMaterial
-MRUItem17=/Game/Enemy2/Enemy/Enemy_Behaviour
-MRUItem18=/Game/Enemy2/Enemy/Enemy_Controller
-MRUItem19=/Game/Oli_BPs/Assets/Finished-Assets/room_tex
+MRUItem4=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_walk
+MRUItem5=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_Player_characterCleanedAction
+MRUItem6=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_passout_001
+MRUItem7=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_PhysicsAsset
+MRUItem8=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_walk
+MRUItem9=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh
+MRUItem10=/Game/Liam_Enemy/EnemyModel/Brute/orcbrute_mesh
+MRUItem11=/Game/Liam_Enemy/LiamTestLevel
+MRUItem12=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Skeleton
+MRUItem13=/Game/Liam_Enemy/BruteAnim_BP
+MRUItem14=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem15=/Game/Liam_Enemy/Enemy_Controller
+MRUItem16=/Game/Liam_Enemy/TaskChasePlayer
+MRUItem17=/Game/Liam_Enemy/Enemy_Behaviour
+MRUItem18=/Game/Liam_Enemy/EnemyHealer_BP
+MRUItem19=/Game/Liam_Enemy/EnemyModel/Healer/orcmedic_mesh
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Liam_Enemy/EnemyHealer_BP.EnemyHealer_BP;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Liam_Enemy/Enemy_BP.Enemy_BP;
 RecentlyPlaced=/Game/Oli_BPs/Assets/pillar_mesh.pillar_mesh;
@@ -2195,7 +2317,7 @@ EditorStyleSettings=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Oli_BPs/Camera_BP.Camera_BP=1
-/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter=1
+/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter=0
 /Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController=1
 /Game/Oli_BPs/Room_BP.Room_BP=1
 /Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode=1
@@ -2214,6 +2336,19 @@ EditorStyleSettings=True
 /Game/Oli_BPs/Assets/Animations/NewAnimation1.NewAnimation1=1
 /Game/Oli_BPs/MainMenu-Widget.MainMenu-Widget=1
 /Game/Oli_BPs/menu_w_cntrl.menu_w_cntrl=1
+/Game/Oli_BPs/HUD-Stuff/HUD-WidgetBP.HUD-WidgetBP=0
+/Game/Liam_Enemy/EnemyModel/orcbrute_tex_Mat.orcbrute_tex_Mat=0
+/Game/Liam_Enemy/EnemyModel/orcbrute_mesh.orcbrute_mesh=0
+/Game/Liam_Enemy/Enemy_BP.Enemy_BP=0
+/Game/Liam_Enemy/EnemyModel/Healer/orcmedic_mesh.orcmedic_mesh=0
+/Game/Liam_Enemy/EnemyModel/Brute/orcbrute_mesh.orcbrute_mesh=0
+/Game/Liam_Enemy/EnemyHealer_BP.EnemyHealer_BP=0
+/Game/Liam_Enemy/TaskChasePlayer.TaskChasePlayer=0
+/Game/Liam_Enemy/Enemy_Controller.Enemy_Controller=0
+/Game/Liam_Enemy/Enemy_Behaviour.Enemy_Behaviour=0
+/Game/Liam_Enemy/Enemy_Blackboard.Enemy_Blackboard=0
+/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh.orcbruteANIM_mesh=0
+/Game/Liam_Enemy/EnemyBruteAnim_BP.EnemyBruteAnim_BP=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2266,8 +2401,8 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMeshComponent=
-MeshComponent=
+StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" "
+MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -2277,18 +2412,25 @@ BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 Image="\"Object.Appearance.Brush\" "
-Widget="\"Object.Appearance.Brush\" "
-Visual="\"Object.Appearance.Brush\" "
+Widget=
+Visual=
 Border="\"Object.Appearance.Background\" "
 ContentWidget=
 PanelWidget=
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode=
+SkeletalMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SkinnedMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+EnemyHealer_BP_C=
+Character=
+Pawn=
+Enemy_BP_C=
+CapsuleComponent=
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2304,7 +2446,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
-bImportAnimations=False
+bImportAnimations=True
 bImportMaterials=True
 bImportTextures=True
 
@@ -2502,6 +2644,8 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 
 [MRU]
 MRUItem0=/Game/Liam_Enemy/LiamTestLevel
@@ -2582,4 +2726,7 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 FrameNumberDisplayFormat=Seconds
 MovieRendererName=
+
+[/Script/UnrealEd.AnimationBlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
