--- a/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Liam_Enemy/EnemyModel/Brute
+ContentBrowserDrawer.SelectedPaths=/Game/Liam_Enemy
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -193,7 +193,6 @@ LastLevel=/Game/Liam_Enemy/LiamTestLevel
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Liam_Enemy/Enemy_BP.Enemy_BP
-OpenAssetsAtExit=/Game/Liam_Enemy/EnemyBruteAnim_BP.EnemyBruteAnim_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -226,7 +225,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/2001555/UE5 Project/Hardest-Route-2/HardestRoute/Content/TopDown/Maps
+UNR=D:/Day2HardestRoute/Hardest-Route-2/HardestRoute/Content/Liam_Enemy
 BRUSH=D:/2001555/UE5 Project/HardestRoute/Content/
 FBX=D:/2001555/UE5 Project/HardestRoute/Content/
 FBXAnim=D:/2001555/UE5 Project/HardestRoute/Content/
@@ -2272,27 +2271,30 @@ AnimStateTransitionNode.BlendSettings=True
 AnimStateTransitionNode.Events=True
 AnimStateTransitionNode.Notifications=True
 EnemyBruteAnim_BP_C.Default=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_passout
-MRUItem1=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute__headbutt
-MRUItem2=/Game/Liam_Enemy/EnemyBruteAnim_BP
-MRUItem3=/Game/Liam_Enemy/Enemy_BP
-MRUItem4=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_walk
-MRUItem5=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_Player_characterCleanedAction
-MRUItem6=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_passout_001
-MRUItem7=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_PhysicsAsset
-MRUItem8=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_walk
-MRUItem9=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh
-MRUItem10=/Game/Liam_Enemy/EnemyModel/Brute/orcbrute_mesh
-MRUItem11=/Game/Liam_Enemy/LiamTestLevel
-MRUItem12=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Skeleton
-MRUItem13=/Game/Liam_Enemy/BruteAnim_BP
-MRUItem14=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem15=/Game/Liam_Enemy/Enemy_Controller
-MRUItem16=/Game/Liam_Enemy/TaskChasePlayer
-MRUItem17=/Game/Liam_Enemy/Enemy_Behaviour
-MRUItem18=/Game/Liam_Enemy/EnemyHealer_BP
+MRUItem0=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem1=/Game/Liam_Enemy/EnemyHealer_BP
+MRUItem2=/Game/Liam_Enemy/Enemy_BP
+MRUItem3=/Game/Liam_Enemy/LiamTestLevel
+MRUItem4=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_passout
+MRUItem5=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute__headbutt
+MRUItem6=/Game/Liam_Enemy/EnemyBruteAnim_BP
+MRUItem7=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_walk
+MRUItem8=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_Player_characterCleanedAction
+MRUItem9=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_orcbrute_passout_001
+MRUItem10=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_PhysicsAsset
+MRUItem11=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Anim_orcbrute_armature_walk
+MRUItem12=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh
+MRUItem13=/Game/Liam_Enemy/EnemyModel/Brute/orcbrute_mesh
+MRUItem14=/Game/Liam_Enemy/EnemyModel/Brute/orcbruteANIM_mesh_Skeleton
+MRUItem15=/Game/Liam_Enemy/BruteAnim_BP
+MRUItem16=/Game/Liam_Enemy/Enemy_Controller
+MRUItem17=/Game/Liam_Enemy/TaskChasePlayer
+MRUItem18=/Game/Liam_Enemy/Enemy_Behaviour
 MRUItem19=/Game/Liam_Enemy/EnemyModel/Healer/orcmedic_mesh
 
 [PlacementMode]
