--- a/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HardestRoute/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1157,7 +1157,7 @@ SceneComponent=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.
 Camera_BP_C=CameraComponent.TransformCommon.Transform,
 Room_BP_C=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 PlayerStart=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
-CapsuleComponent=
+CapsuleComponent=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,
 K2Node_VariableSet=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
 K2Node_VariableGet=CameraComponent.TransformCommon.Transform,BoxComponent.Collision.Collision,
